--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "moment": "^2.23.0",
     "mongodb": "^3.1.12",
+    "request": "^2.88.0",
     "rss-parser": "^3.6.2"
   },
   "devDependencies": {
