--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "opentitles-client",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.7.0",
+  "description": "Show the changes to titles for over 40 news outlets.",
   "main": "ot_script.js",
   "repository": {
     "type": "git",
