--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "compile": "parcel src/*"
+    "compile": "parcel build src/* --no-minify",
+    "lint": "eslint \"./src/**/*.ts\" --max-warnings 2"
   },
   "dependencies": {},
   "devDependencies": {
@@ -21,5 +22,8 @@
   "staticFiles": {
     "staticPath": "src/static",
     "watcherGlob": false
-}
+  },
+  "browserslist": [
+    "last 1 Chrome versions"
+  ]
 }
