feat: full typescript rewrite (#9)
* feat: add initial typescript rewrite

* refactor: extract more methods

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -16,7 +16,7 @@
   "browser_action": {
     "default_icon": "icons/logo48.png",
     "default_title": "Suggest this website to OpenTitles",
-    "default_popup": "popup.html"
+    "default_popup": "popup/popup.html"
   },
   
   "content_scripts": [{
@@ -64,13 +64,13 @@
       "https://*.theguardian.com/*",
       "https://*.reuters.com/*"
     ],
-    "js": ["ot_script.js"],
-    "css": ["ot_style.css"],
+    "js": ["OpenTitlesMainScript.js"],
+    "css": ["style/OpenTitles.css"],
     "run_at": "document_idle"
   }],
 
   "background": {
-    "scripts": ["ot_background.js"],
+    "scripts": ["OpenTitlesBackground.js"],
     "persistent": false
   },
 
