--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "13.13.12",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
+    "chrome-webstore-upload-cli": "^1.2.0",
     "crx3": "^1.1.2",
     "eslint": "7.3.0",
     "parcel-bundler": "^1.12.4",
