--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chrome": "0.0.116",
     "@types/firefox-webext-browser": "^70.0.1",
     "@types/jasmine": "^3.5.11",
+    "@types/jsdom": "^16.2.3",
     "@types/node": "13.13.12",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
@@ -23,6 +24,7 @@
     "jasmine": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
     "jasmine-ts": "^0.3.0",
+    "jsdom": "^16.2.2",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.4.3",
     "ts-node": "^8.10.2",
