--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "es2018",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    // "outDir": "./dist",
+    // "rootDir": "./src",
     "removeComments": false,
     "strict": true,
     "alwaysStrict": true,
