--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.3.0",
   "scripts": {
     "test": "jasmine-ts --config=jasmine.config.json",
-    "build": "parcel build src/* --no-minify",
+    "build": "parcel build src/* --no-minify && tsc src/static/popup/popup.ts --outFile dist/popup/popup.js",
     "package": "crx3 -z OpenTitles.zip -o OpenTitles.crx dist",
     "lint": "eslint \"./src/**/*.ts\" --max-warnings 2",
     "publish-chrome": "webstore upload --source OpenTitles.zip --auto-publish --extension-id ipcpballelfolmocdhfjijgmbljachog --client-id $CWS_CLIENT_ID --client-secret $CWS_CLIENT_SECRET --refresh-token $CWS_REFRESH_TOKEN"
