--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "2.9.0",
   "scripts": {
     "test": "jasmine-ts --config=jasmine.config.json",
-    "build": "parcel build src/* --no-minify && tsc src/static/popup/popup.ts --outFile dist/popup/popup.js || true",
-    "package": "crx3 -z OpenTitles.zip -o OpenTitles.crx dist",
     "lint": "eslint \"./src/**/*.ts\" --max-warnings 2",
-    "publish-chrome": "webstore upload --source OpenTitles.zip --auto-publish --extension-id ipcpballelfolmocdhfjijgmbljachog --client-id $CWS_CLIENT_ID --client-secret $CWS_CLIENT_SECRET --refresh-token $CWS_REFRESH_TOKEN || true",
-    "publish-firefox": "web-ext-submit --api-key=$FF_API_KEY --api-secret=$FF_API_SECRET --source-dir dist || true"
+    "build": "npm run build-chrome && npm run build-firefox",
+    "build-chrome": "parcel build src/* --no-minify --out-dir dist-chrome && node ./.github/chromifyManifest.js && tsc src/static/popup/popup.ts --outFile dist-chrome/popup/popup.js || true",
+    "build-firefox": "parcel build src/* --no-minify --out-dir dist-firefox && tsc src/static/popup/popup.ts --outFile dist-firefox/popup/popup.js || true",
+    "package": "npm run package-chrome && npm run package-firefox",
+    "package-chrome": "crx3 -z OpenTitles-Chrome.zip -o OpenTitles-Chrome.crx dist-chrome",
+    "package-firefox": "crx3 -z OpenTitles-Firefox.zip -o OpenTitles-Chrome.crx dist-firefox",
+    "publish-chrome": "webstore upload --source OpenTitles-Chrome.zip --auto-publish --extension-id ipcpballelfolmocdhfjijgmbljachog --client-id $CWS_CLIENT_ID --client-secret $CWS_CLIENT_SECRET --refresh-token $CWS_REFRESH_TOKEN || true",
+    "publish-firefox": "web-ext-submit --api-key=$FF_API_KEY --api-secret=$FF_API_SECRET --source-dir dist-firefox || true"
   },
   "dependencies": {},
   "devDependencies": {
