refactor: upgrade parcel to v2

--- a/package.json
+++ b/package.json
@@ -2,44 +2,46 @@
   "name": "opentitles.client",
   "private": true,
   "version": "2.11.0",
+  "engines": {
+    "node": ">=14.18.1"
+  },
   "scripts": {
     "test": "jasmine-ts --config=jasmine.config.json",
     "lint": "eslint \"./src/**/*.ts\" --max-warnings 2",
     "build": "npm run build-chrome && npm run build-firefox",
-    "build-chrome": "parcel build src/* --no-minify --out-dir dist-chrome && node ./.github/chromifyManifest.js && tsc src/static/popup/popup.ts --outFile dist-chrome/popup/popup.js || true",
-    "build-firefox": "parcel build src/* --no-minify --out-dir dist-firefox && tsc src/static/popup/popup.ts --outFile dist-firefox/popup/popup.js || true",
+    "build-chrome": "parcel build src/**/*.ts --no-optimize --no-cache --no-source-maps --dist-dir dist-chrome && cpx \"src/static/**/*.{html,eot,svg,ttf,woff,woff2,png,css,json}\" \"dist-chrome\" && node ./.github/chromifyManifest.js",
+    "build-firefox": "parcel build src/**/*.ts --no-optimize --no-cache --no-source-maps --dist-dir dist-firefox && cpx \"src/static/**/*.{html,eot,svg,ttf,woff,woff2,png,css,json}\" \"dist-firefox\"",
     "package": "npm run package-chrome && npm run package-firefox",
     "package-chrome": "crx3 -z OpenTitles-Chrome.zip -o OpenTitles-Chrome.crx dist-chrome",
     "package-firefox": "crx3 -z OpenTitles-Firefox.zip -o OpenTitles-Firefox.crx dist-firefox",
-    "publish-chrome": "webstore upload --source OpenTitles-Chrome.zip --auto-publish --extension-id ipcpballelfolmocdhfjijgmbljachog --client-id $CWS_CLIENT_ID --client-secret $CWS_CLIENT_SECRET --refresh-token $CWS_REFRESH_TOKEN || true",
+    "publish-chrome": "chrome-webstore-upload upload --source OpenTitles-Chrome.zip --auto-publish --extension-id ipcpballelfolmocdhfjijgmbljachog --client-id $CWS_CLIENT_ID --client-secret $CWS_CLIENT_SECRET --refresh-token $CWS_REFRESH_TOKEN || true",
     "publish-firefox": "web-ext-submit --api-key=$FF_API_KEY --api-secret=$FF_API_SECRET --source-dir dist-firefox || true"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/chrome": "0.0.143",
-    "@types/firefox-webext-browser": "82.0.0",
-    "@types/jasmine": "3.7.6",
-    "@types/jsdom": "16.2.10",
-    "@types/node": "15.6.1",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
-    "chrome-webstore-upload-cli": "1.2.1",
+    "@parcel/config-default": "2.0.0",
+    "@parcel/transformer-typescript-tsc": "2.0.0",
+    "@types/chrome": "0.0.159",
+    "@types/firefox-webext-browser": "94.0.0",
+    "@types/jasmine": "3.10.0",
+    "@types/jsdom": "16.2.13",
+    "@types/node": "16.11.1",
+    "@typescript-eslint/eslint-plugin": "5.1.0",
+    "@typescript-eslint/parser": "5.1.0",
+    "chrome-webstore-upload-cli": "2.0.1",
+    "cpx": "^1.5.0",
     "crx3": "1.1.3",
-    "eslint": "7.27.0",
-    "jasmine": "3.7.0",
+    "eslint": "8.0.1",
+    "jasmine": "3.10.0",
     "jasmine-spec-reporter": "7.0.0",
-    "jasmine-ts": "0.3.3",
-    "jsdom": "16.6.0",
-    "parcel-bundler": "1.12.5",
-    "parcel-plugin-static-files-copy": "2.6.0",
-    "ts-node": "10.0.0",
-    "typescript": "4.3.2",
-    "web-ext": "6.1.0",
-    "web-ext-submit": "6.1.0"
-  },
-  "staticFiles": {
-    "staticPath": "src/static",
-    "watcherGlob": false
+    "jasmine-ts": "0.4.0",
+    "jsdom": "18.0.0",
+    "parcel": "2.0.0",
+    "parcel-reporter-static-files-copy": "^1.3.0",
+    "ts-node": "10.3.0",
+    "typescript": "4.4.4",
+    "web-ext": "6.5.0",
+    "web-ext-submit": "6.5.0"
   },
   "browserslist": [
     "last 1 Chrome versions"
