--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
-    "declaration": true,
-    // "outDir": "./dist",
-    // "rootDir": "./src",
+    "declaration": false,
     "removeComments": false,
     "strict": true,
     "alwaysStrict": true,
