--- a/jasmine.config.json
+++ b/jasmine.config.json
@@ -1,12 +1,5 @@
 {
-  "reporters": [
-    {
-      "name": "jasmine-spec-reporter#SpecReporter",
-      "options": {
-        "displayStacktrace": "all"
-      }
-    }
-  ],
   "spec_dir": "test",
-  "spec_files": ["**/*[sS]pec.ts"]
+  "spec_files": ["**/*[sS]pec.ts"],
+  "random": false
 }
