--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@parcel/config-default": "2.8.0",
-    "@parcel/transformer-typescript-tsc": "2.8.0",
-    "@types/chrome": "0.0.202",
-    "@types/firefox-webext-browser": "94.0.1",
-    "@types/jasmine": "3.10.6",
-    "@types/jsdom": "16.2.15",
-    "@types/node": "16.18.3",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@parcel/config-default": "2.8.3",
+    "@parcel/transformer-typescript-tsc": "2.8.3",
+    "@types/chrome": "0.0.212",
+    "@types/firefox-webext-browser": "109.0.0",
+    "@types/jasmine": "3.10.7",
+    "@types/jsdom": "20.0.1",
+    "@types/node": "16.18.11",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
     "chrome-webstore-upload-cli": "2.1.0",
     "cpx": "1.5.0",
     "crx3": "1.1.3",
-    "eslint": "8.28.0",
-    "jasmine": "3.99.0",
+    "eslint": "8.33.0",
+    "jasmine": "3.99.0 <4",
     "jasmine-spec-reporter": "7.0.0",
     "jasmine-ts": "0.4.0",
-    "jsdom": "18.1.1",
-    "parcel": "2.8.0",
-    "parcel-reporter-static-files-copy": "1.4.0",
+    "jsdom": "21.1.0",
+    "parcel": "2.8.3",
+    "parcel-reporter-static-files-copy": "1.5.0",
     "ts-node": "10.9.1",
-    "typescript": "4.9.3",
-    "web-ext": "6.8.0",
-    "web-ext-submit": "6.8.0"
+    "typescript": "4.9.5",
+    "web-ext": "7.5.0",
+    "web-ext-submit": "7.5.0"
   },
   "browserslist": [
     "last 1 Chrome versions"
