--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,22 +14,23 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout client
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           clean: true
           ref: master
 
       - name: Checkout definition
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: opentitles/definition
           path: definition
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
