--- a/.github/actions/bump/package.json
+++ b/.github/actions/bump/package.json
@@ -25,15 +25,15 @@
   },
   "homepage": "https://github.com/tool3/bump#readme",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4",
-    "@actions/github": "^5.0.0",
-    "actions-toolkit": "^6.0.0"
+    "@actions/core": "1.10.0",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "5.1.1",
+    "actions-toolkit": "6.0.1"
   },
   "devDependencies": {
     "@zeit/ncc": "0.22.3",
-    "eslint": "8.12.0",
-    "husky": "7.0.4",
-    "jest": "27.4.7"
+    "eslint": "8.33.0",
+    "husky": "8.0.3",
+    "jest": "29.4.1"
   }
 }
